Fix alignment in gallery

--- a/src/app/art/art.component.scss
+++ b/src/app/art/art.component.scss
@@ -100,15 +100,16 @@ h2 {
     display: flex;
     flex-flow: column nowrap;
     position: relative;
+    justify-content: center;
     .gallery-image {
       max-width: 100%;
       max-height: calc(100% - 125px);
+      display: flex;
+      justify-content: center;
       text-align: center;
       img {
         max-width: 100%;
         max-height: 100%;
-        overflow: hidden;
-        margin: 12px;
         border-radius: 12px;
         border: 4px solid #333;
         min-height: $gallery-image-size;
